--- a/index.html
+++ b/index.html
@@ -76,7 +76,44 @@
 
   <!-- banner part start -->
   <section id="banner">
-    <div class="container">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="assets/img/banner.jpg" alt="First slide">
+          <div class="banner-title">
+
+            <h1>Nos inspecteurs s'occupent de vous !</h1>
+            <p>
+              Nos inspecteurs en bâtiment vous assurent d'une tranquillité
+              d'esprit
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="assets/img/banner1.jpeg" alt="First slide">
+          <div class="banner-title">
+
+            <h1>Nos inspecteurs s'occupent de vous !</h1>
+            <p>
+              Nos inspecteurs en bâtiment vous assurent d'une tranquillité
+              d'esprit
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="assets/img/banner2.jpg" alt="First slide">
+          <div class="banner-title">
+
+            <h1>Nos inspecteurs s'occupent de vous !</h1>
+            <p>
+              Nos inspecteurs en bâtiment vous assurent d'une tranquillité
+              d'esprit
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class=" container">
       <div class="row">
         <div class="banner-title">
 
@@ -87,7 +124,7 @@
           </p>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
   <!-- banner part end -->
   <!-- main moto part start -->
