--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
   </header>
   <!-- header section End -->
   <!-- header section End -->
-
+<div class="preloader" style="display: none;">
+        <div class="preloader-inner-area">
+            <div class="loader-overlay">
+                <div class="l-preloader">
+                    <div class="c-preloader"></div>
+                </div>
+            </div>
+        </div>
+    </div>
   <!-- banner part start -->
   <section id="banner">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
