--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- Bootstrap Linkup -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/animate.css">
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/media.css" />
 </head>
@@ -44,13 +45,13 @@
       <div class="row">
         <div class="col-sm">
           <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt="" /></a>
+            <a class="navbar-brand wow fadeInLeft" data-wow-delay=".2s" href="#"><img src="assets/img/logo.png" alt="" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ml-auto text-uppercase">
+              <ul class="navbar-nav ml-auto text-uppercase wow fadeInRight" data-wow-delay=".2s">
                 <li class="nav-item active">
                   <a class="nav-link" href="#banner">acccueil </a>
                 </li>
@@ -83,12 +84,12 @@
         </div>
     </div>
   <!-- banner part start -->
-  <section id="banner">
+  <section id="banner" class="wow fadeIn" data-wow-delay=".5s">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100" src="assets/img/banner.jpg" alt="First slide">
-          <div class="banner-title">
+          <div class="banner-title wow fadeIn" data-wow-delay="1s">
 
             <h1>Nos inspecteurs s'occupent de vous !</h1>
             <p>
@@ -140,7 +141,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <div class="media">
+          <div class="media wow fadeInLeft" data-wow-delay=".2s">
             <img class="mr-3" src="assets/img/identifier.png" alt="Identifier" />
             <div class="media-body">
               <h5 class="mt-0">Identifier</h5>
@@ -150,7 +151,7 @@
           </div>
         </div>
         <div class="col-sm">
-          <div class="media">
+          <div class="media wow fadeInLeft" data-wow-delay=".4s">
             <img class="mr-3" src="assets/img/ticked-box.png" alt="Identifier" />
             <div class="media-body">
               <h5 class="mt-0">Corriger</h5>
@@ -160,7 +161,7 @@
           </div>
         </div>
         <div class="col-sm">
-          <div class="media">
+          <div class="media wow fadeInLeft" data-wow-delay=".6s">
             <img class="mr-3" src="assets/img/Valoriser.png" alt="Identifier" />
             <div class="media-body">
               <h5 class="mt-0">Valoriser</h5>
@@ -177,20 +178,20 @@
   <section id="expart-section" class="">
     <div class="container">
       <div class="row">
-        <div class="col-sm text-center">
+        <div class="col-sm text-center wow fadeInLeftBig" data-wow-delay=".8s">
           <img src="assets/img/Vector-Smart-Object.png" alt="" class="img-fluid " />
           <h1>UN EXPERT AVEC VOUS DU DÉBUT À LA FIN !</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm">
+        <div class="col-sm wow fadeInLeft" data-wow-delay=".2s">
           <h3>TYPES D'IMMEUBLE</h3>
           <hr />
         </div>
       </div>
       <div class="row">
         <div class="col-sm">
-          <div class="media align-items-center">
+          <div class="media align-items-center wow fadeInLeft" data-wow-delay=".4s">
             <img class="mr-3" src="assets/img/single-family.jpg" class="img-fluid" alt=" Identifier" />
             <div class="media-body">
               <h5 class="mt-0">Unifamilial (Maison)</h5>
@@ -199,7 +200,7 @@
           </div>
         </div>
         <div class="col-sm">
-          <div class="media align-items-center">
+          <div class="media align-items-center wow fadeInLeft" data-wow-delay=".5s">
             <img class="mr-3" src="assets/img/Copropriétés.jpg" alt="Identifier" class="img-fluid" />
             <div class="media-body">
               <h5 class="mt-0">Unifamilial (Maison)</h5>
@@ -208,7 +209,7 @@
           </div>
         </div>
         <div class="col-sm">
-          <div class="media align-items-center">
+          <div class="media align-items-center wow fadeInLeft" data-wow-delay=".6s">
             <img class="mr-3" src="assets/img/commercial.jpg" alt="Identifier" class="img-fluid" />
             <div class="media-body">
               <h5 class="mt-0">Unifamilial (Maison)</h5>
@@ -224,7 +225,7 @@
   <section id="servicess">
     <div class="container">
       <div class="row">
-        <div class="col-sm">
+        <div class="col-sm wow fadeInLeft" data-wow-delay=".2s">
           <h3>TYPES D'IMMEUBLE</h3>
           <hr />
           <span></span>
@@ -232,10 +233,10 @@
       </div>
       <!-- identifier start -->
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12 wow bounceIn" data-wow-delay=".2s">
           <h4>Identifier</h4>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInLeft" data-wow-delay=".4s">
           <img src="assets/img/identifier.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -244,7 +245,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInLeft" data-wow-delay=".6s">
           <img src="assets/img/write.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -253,7 +254,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInRight" data-wow-delay=".6s">
           <img src="assets/img/2.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -262,7 +263,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInRight" data-wow-delay=".4s">
           <img src="assets/img/fire.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -272,7 +273,7 @@
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
         <div class="w-100 my-3"></div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".5s">
           <img src="assets/img/4.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -281,7 +282,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".6s">
           <img src="assets/img/5.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -290,7 +291,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".7s">
           <img src="assets/img/6.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -299,7 +300,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".8s">
           <img src="assets/img/7.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -309,10 +310,10 @@
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
         <!-- corriger start -->
-        <div class="col-sm-12 mt-3">
+        <div class="col-sm-12 mt-3 wow bounceIn" data-wow-delay=".6s">
           <h4>Corriger</h4>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".8s">
           <img src="assets/img/8.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -321,7 +322,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".7s">
           <img src="assets/img/9.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -330,7 +331,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".6s">
           <img src="assets/img/10.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -339,7 +340,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".5s">
           <img src="assets/img/11.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -349,10 +350,10 @@
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
         <!-- valoriser start -->
-        <div class="col-sm-12 mt-3">
+        <div class="col-sm-12 mt-3 wow bounceIn" data-wow-delay=".6s"">
           <h4>Valoriser</h4>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".5s">
           <img src="assets/img/12.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -361,7 +362,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".6s">
           <img src="assets/img/13.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -370,7 +371,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".7s">
           <img src="assets/img/14.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -379,7 +380,7 @@
           </p>
           <button type="button" class="btn btn-info">LIRE PLUS</button>
         </div>
-        <div class="col-sm-6 col-md">
+        <div class="col-sm-6 col-md wow fadeInDown" data-wow-delay=".7s">
           <img src="assets/img/15.jpg" alt="" class="img-fluid" />
           <h6>lorem ipsum</h6>
           <p>
@@ -396,7 +397,7 @@
   <section id="blog">
     <div class="container">
       <div class="row">
-        <div class="col-sm">
+        <div class="col-sm wow fadeInLeft" data-wow-delay=".4s">
           <h3>ARTICLE DE NOTRE BLOGUE</h3>
           <hr />
         </div>
@@ -414,9 +415,9 @@
               <div class="carousel-item active">
                 <div class="media flex-column-reverse flex-lg-row">
                   <img class="mr-3" src="assets/img/building-joy-planning-plans.jpg" alt="Identifier"
-                    class="img-fluid" />
-                  <div class="media-body">
-                    <h4 class="mt-0">Lorem Ipsum</h4>
+                    class="img-fluid wow fadeInLeftBig" data-wow-delay=".7s" />
+                  <div class="media-body wow fadeInRightBig" data-wow-delay=".7s">
+                    <h4 class="mt-0 ">Lorem Ipsum</h4>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -430,8 +431,8 @@
               </div>
               <div class="carousel-item">
                 <div class="media flex-column-reverse flex-lg-row">
-                  <img class="mr-3" src="assets/img/commercial.jpg" alt="Identifier" class="img-fluid" />
-                  <div class="media-body">
+                  <img class="mr-3" src="assets/img/commercial.jpg" alt="Identifier" class="img-fluid wow fadeInLeftBig" data-wow-delay=".7s" />
+                  <div class="media-body wow fadeInRightBig" data-wow-delay=".7s">
                     <h4 class="mt-0">Lorem Ipsum</h4>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -455,7 +456,7 @@
   <section id="propos">
     <div class="container">
       <div class="row ">
-        <div class="col-lg-6">
+        <div class="col-lg-6 wow fadeInRightBig" data-wow-delay=".5s">
           <h3>POURQUOI NOUS CHOISIR</h3>
           <hr />
           <div class="col-sm-12">
@@ -489,7 +490,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 wow fadeInLeftBig" data-wow-delay=".5s">
           <h3>À PROPOS</h3>
           <hr />
           <div class="media flex-column flex-sm-row">
@@ -517,32 +518,32 @@
   <section id="partner" class="partner">
     <div class="container">
       <div class="row">
-        <div class="col-sm ">
+        <div class="col-sm wow fadeInLeft" data-wow-delay=".5s">
           <h3>POURQUOI NOUS CHOISIR</h3>
           <hr />
         </div>
         <div class="w-100"></div>
-        <div class="col-6 col-md">
+        <div class="col-6 col-md wow fadeInUp" data-wow-delay=".2s">
           <div class="associations">
             <img src="assets/img/company1.png" alt="" />
           </div>
         </div>
-        <div class="col-6 col-md ">
+        <div class="col-6 col-md wow fadeInUp" data-wow-delay=".4s ">
           <div class="associations">
             <img src="assets/img/company2.jpg" alt="" />
           </div>
         </div>
-        <div class="col-6 col-md ">
+        <div class="col-6 col-md wow fadeInUp" data-wow-delay=".6s">
           <div class="associations">
             <img src="assets/img/company3.jpg" alt="" />
           </div>
         </div>
-        <div class="col-6 col-md ">
+        <div class="col-6 col-md wow fadeInUp" data-wow-delay=".8s">
           <div class="associations">
             <img src="assets/img/company4.png" alt="" />
           </div>
         </div>
-        <div class="col-sm ">
+        <div class="col-sm wow fadeInUp" data-wow-delay=".9s">
           <div class="associations">
             <img src="assets/img/company5.jpg" alt="" />
           </div>
@@ -556,15 +557,15 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-sm">
+        <div class="col-sm wow fadeInRightBig" data-wow-delay=".2s">
           <div class="footer-logo">
             <img src=" assets/img/logo.png" alt="" class="img-fluid"></<img>
             <p>Subscribe our newsletter gor get notifi !</p>
             <button type="button" class="btn btn-info">DEMANDE EN LIGNE</button>
           </div>
         </div>
-        <div class="col-sm d-none d-lg-block">
-          <div class="footer-widget">
+        <div class="col-sm d-none d-lg-block ">
+          <div class="footer-widget wow fadeInUpBig" data-wow-delay=".4s">
             <h4>SERVICES</h4>
             <ul>
               <li><i class="fa fa-caret-right"></i> <a href="#">Identifier</a></li>
@@ -582,7 +583,7 @@
           </div>
         </div>
         <div class="col-sm d-none d-lg-block">
-          <div class="footer-widget-1">
+          <div class="footer-widget-1 wow fadeInDownBig" data-wow-delay=".6s">
             <h4>NOTRE ENGAGEMENT</h4>
             <ul class="social">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
@@ -605,7 +606,7 @@
           </div>
         </div>
         <div class="col-sm d-none d-md-block">
-          <div class="footer-widget">
+          <div class="footer-widget wow fadeInLeftBig" data-wow-delay=".6s">
             <h4>CONTACT</h4>
             <ul class="contact-option">
               <li><i class="fas fa-phone-square-alt"></i> <a href="#">(+88) 666 121 4321</a></li>
@@ -627,6 +628,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/3c03386ad8.js" crossorigin="anonymous"></script>
+  <script src="assets/js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+</script>
 </body>
 
 </html>
